--- a/.github/workflows/profile-sync.yml
+++ b/.github/workflows/profile-sync.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: cli/cli@v2
+      - uses: cli/setup-gh@v3
       - name: Build sections
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
